# ai-personase

./: .dockerignore  build_exe_lyl.py  docker-compose.yml  launcher_lyl.py  main.py  pyproject.toml  run.py  《Python程序设计》课程考查内容及评分标准.docx  小白安装教程.md  知识问答系统.spec  系统使用说明书.docx
backend/: .dockerignore  Dockerfile  generate_manual_lyl.py
backend/app/: __init__.py  main.py
backend/app/api/: chat.py  knowledge.py
backend/app/core/: config.py  logger.py
backend/app/database/: database.py
backend/app/models/: schemas.py
backend/app/services/: agent_service.py  conversation_service.py  document_service.py  embedding_service.py  rag_tool.py  vector_store_service.py
backend/static/: index.html
backend/static/assets/: index-DWGJdrVm.js  index-PNR3bvHU.css
data/: knowledge_qa.db
data/documents/: 20251211_054226_打包文档.md
data/vector_store/: index.faiss  index.pkl
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatInput_lyl.css  ChatInput_lyl.tsx  ChatMessage_lyl.css  ChatMessage_lyl.tsx  ConversationList_lyl.css  ConversationList_lyl.tsx  LoadingDots_lyl.css  LoadingDots_lyl.tsx  ToolCallCard_lyl.css  ToolCallCard_lyl.tsx
frontend/src/pages/: ChatPage_lyl.css  ChatPage_lyl.tsx  HistoryPage_lyl.css  HistoryPage_lyl.tsx  KnowledgePage_lyl.css  KnowledgePage_lyl.tsx
frontend/src/services/: api_lyl.ts
frontend/src/types/: index_lyl.ts
